test/fail_compilation/fail4245f.d
// 4245
void fail4245()
{
    {
        interface Foo { }
    }
    {
        interface Foo { }
    }
}
